--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"><span>T</span>ravel</a>
+    <div>
+        <a href="#">
+            <img class="logo" src="images/Logo.svg" alt=""/>
+        </a>
+    </div>
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#services">services</a>
-        <a href="#contact">contact</a>  
+        <a href="#services">our services</a>
+        <a href="#gallery">gallery</a>
+        <a href="#contact">contact us</a>  
     </nav>
 
     <!-- <div class="icons">
@@ -45,7 +50,7 @@
 <!-- header section ends -->
 
 <!-- login form container  -->
-
+<!--
 <div class="login-form-container">
 
     <i class="fas fa-times" id="form-close"></i>
@@ -62,7 +67,7 @@
     </form>
 
 </div>
-
+-->
 <!-- home section starts  -->
 
 <section class="home" id="home">
@@ -70,7 +75,7 @@
     <div class="content">
         <h3>adventure is worthwhile</h3>
         <p>dicover new places with us, adventure awaits</p>
-        <a href="#" class="btn">discover more</a>
+        <a href="#services" class="btn">Get a Tour</a>
     </div>
 
     <div class="controls">
@@ -91,7 +96,8 @@
 
 <!-- book section starts  -->
 
-<section class="book" id="book">
+<!--
+    <section class="book" id="book">
 
     <h1 class="heading">
         <span>b</span>
@@ -133,12 +139,14 @@
     </div>
 
 </section>
+-->
 
 <!-- book section ends -->
 
 <!-- packages section starts  -->
 
-<section class="packages" id="packages">
+<!--
+    <section class="packages" id="packages">
 
     <h1 class="heading">
         <span>p</span>
@@ -258,6 +266,7 @@
     </div>
 
 </section>
+-->
 
 <!-- packages section ends -->
 
@@ -266,6 +275,9 @@
 <section class="services" id="services">
 
     <h1 class="heading">
+        <span>o</span>
+        <span>u</span>
+        <span>r</span>
         <span>s</span>
         <span>e</span>
         <span>r</span>
@@ -334,73 +346,65 @@
         <div class="box">
             <img src="images/g-1.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>paris</h3>
+                        <p>France</p>
+                <!--<a href="#" class="btn">see more</a>-->
             </div>
         </div>
         <div class="box">
             <img src="images/g-2.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>hawaii</h3>
+                        <p>united states of america</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-3.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>taj mahal</h3>
+                        <p>india</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-4.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>maldives</h3>
+                        <p>maldives</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-5.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>pisa</h3>
+                        <p>italy</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-6.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>dubai</h3>
+                        <p>united arab emirates</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-7.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>madrid</h3>
+                        <p>spain</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-8.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>sydney</h3>
+                        <p>australia</p>
             </div>
         </div>
         <div class="box">
             <img src="images/g-9.jpg" alt="">
             <div class="content">
-                <h3>amazing places</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
-                <a href="#" class="btn">see more</a>
+                    <h3>giza</h3>
+                        <p>egypt</p>
             </div>
         </div>
 
@@ -411,7 +415,8 @@
 <!-- gallery section ends -->
 
 <!-- review section starts  -->
-
+<!--
+    
 <section class="review" id="review">
 
     <h1 class="heading">
@@ -489,6 +494,7 @@
     </div>
 
 </section>
+-->
 
 <!-- review section ends -->
 
@@ -504,6 +510,8 @@
         <span>a</span>
         <span>c</span>
         <span>t</span>
+        <span>u</span>
+        <span>s</span>
     </h1>
 
     <div class="row">
@@ -512,18 +520,20 @@
             <img src="images/contact-img.svg" alt="">
         </div>
 
-        <form action="">
+        <div class="contact">
             <div class="inputBox">
-                <input type="text" placeholder="name">
-                <input type="email" placeholder="email">
+                <i class="fas fa-phone"></i>
+                <span>+31 999 999 999</span>
             </div>
             <div class="inputBox">
-                <input type="number" placeholder="number">
-                <input type="text" placeholder="subject">
+                <i class="fas fa-map-marker" ></i>
+                <span>Lorem ipsum dolor sit amet consectetur adisit amet consectetur adipisicing elit.</span>
             </div>
-            <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
-            <input type="submit" class="btn" value="send message">
-        </form>
+            <div class="inputBox">
+                <i class="fas fa-envelope" ></i>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+            </div>
+        </div>
 
     </div>
     
@@ -532,7 +542,8 @@
 <!-- contact section ends -->
 
 <!-- brand section  -->
-<section class="brand-container">
+<!--
+    <section class="brand-container">
 
     <div class="swiper-container brand-slider">
         <div class="swiper-wrapper">
@@ -546,6 +557,7 @@
     </div>
 
 </section>
+-->
 
 <!-- footer section  -->
 
@@ -557,29 +569,28 @@
             <h3>about us</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quas magni pariatur est accusantium voluptas enim nemo facilis sit debitis.</p>
         </div>
-        <div class="box">
+        <!--
+            <div class="box">
             <h3>branch locations</h3>
             <a href="#">india</a>
             <a href="#">USA</a>
             <a href="#">japan</a>
             <a href="#">france</a>
         </div>
+        -->
         <div class="box">
             <h3>quick links</h3>
             <a href="#">home</a>
-            <a href="#">book</a>
-            <a href="#">packages</a>
             <a href="#">services</a>
             <a href="#">gallery</a>
-            <a href="#">review</a>
-            <a href="#">contact</a>
+            <a href="#">contact us</a>
         </div>
         <div class="box">
             <h3>follow us</h3>
-            <a href="#">facebook</a>
-            <a href="#">instagram</a>
-            <a href="#">twitter</a>
-            <a href="#">linkedin</a>
+            <a href="">facebook</a>
+            <a href="">instagram</a>
+            <a href="">twitter</a>
+            <a href="">linkedin</a>
         </div>
 
     </div>
@@ -593,20 +604,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="js/scripts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
 </body>
 </html>
